--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@ header h1{
 a:link {color: #50545D; text-decoration: none; }
 a:active {color: #EDF2D6; text-decoration: none; }
 a:visited {color: #6B6E5E; text-decoration: none; }
+
+img {
+	width: 100%;
+	height: 100%
+}
+
+.col-1, .col-2, .col-3, .col-4, 
+.col-5, .col-6, .col-7, .col-8, 
+.col-9, .col-10, .col-11, .coll-12 {
+	padding: 1%;
+}
