--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ header h1{
 	color: #EAF0CE;
 }
 
-#container{
-	width: 75%;
+#container {
+/*	width: 75%;*/
 	margin: 0 auto;
 	background-color: #C0C5C1;
 }
@@ -17,13 +17,21 @@ a:link {color: #50545D; text-decoration: none; }
 a:active {color: #EDF2D6; text-decoration: none; }
 a:visited {color: #6B6E5E; text-decoration: none; }
 
-img {
-	width: 100%;
-	height: 100%
-}
-
 .col-1, .col-2, .col-3, .col-4, 
 .col-5, .col-6, .col-7, .col-8, 
-.col-9, .col-10, .col-11, .coll-12 {
+.col-9, .col-10, .col-11, .col-12 {
 	padding: 1%;
+}
+
+.avi {
+	width: 100%;
+	border-radius: 50%;
+}
+
+header img {
+	height: 100%;
+}
+
+div img {
+	width: 100%
 }
