--- a/style.css
+++ b/style.css
@@ -35,3 +35,10 @@ header img {
 div img {
 	width: 100%
 }
+
+#circle{
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-color: green;
+}
